[build-system]
requires = [
     	 "scikit-build-core",
	 "Cython"
]
build-backend = "scikit_build_core.build"

[project]
name = "pocketsphinx"
version = "5.0.3"
description = "Official Python bindings for PocketSphinx"
readme = "cython/README.md"
authors = [
        {name = "David Huggins-Daines", email = "dhdaines@gmail.com"}
]
keywords = ["asr", "speech"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/cmusphinx/pocketsphinx"
Documentation = "https://pocketsphinx.readthedocs.io/en/latest/"
Repository = "https://github.com/cmusphinx/pocketsphinx.git"
Issues = "https://github.com/cmusphinx/pocketsphinx/issues"

[tool.cibuildwheel]
# Build a reduced selection of binaries as there are tons of them
build = [
      "pp310*",
      "cp38-*",
      "cp310-*",
      "cp311-*",
      "cp312-*",
]
# Build only universal wheels for Mac where possible
skip = [
     "cp*-macosx_x86_64",
     "cp*-macosx_arm64",
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.isort]
profile = "black"

[tool.flake8]
extend-ignore = "E203"
max-line-length = "88"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
wheel.packages = ["cython/pocketsphinx"]
